# base

./: CMakeLists.txt  README.md  format.sh  main.cpp
fast_variant_visit/: fast_variant_visit.h
include/barrier/: barrier.h
include/dga/: aliases.h  barrier.h  fast_variant_visit.h  flags.h  hash_combine.h  platform.h  remove_cvref.h  result.h  scope.h  semaphore.h  string_algorithms.h
include/fast_variant_visit/: fast_variant_visit.h
include/semaphore/: semaphore.h
include/str_algorithms/: str_algorithms.h
tests/: CMakeLists.txt  flags_test.cpp  main.cpp  result_test.cpp  scope_test.cpp  string_algorithms_test.cpp
